Fix Bug 303069 - KMail2 folders get indexed even when the Enable Full

Text Indexing option is unchecked

Remove indexed text from collection when we unchecked it.

I can't backport to 4.9 because kdelibs/nepomuk was not full.
Now that we depend against nepomuk-core we can do it.

FIXED-IN: 4.10
BUG: 303069